--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,13 @@
 .col {
   border: solid black;
-  height: 300px;
+  height: 500px;
+  padding-top: 10px;
 }
 .container {
   margin-top: 50px;
+  background-color: white;
+}
+body {
+  background-image: url("../img/background.jpg");
+  background-repeat: repeat;
 }
