--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,9 @@ body {
   text-align: right;
   padding-right: 20px;
 }
+#pizza-icon{
+  width: 20px;
+}
 .totals p{
   margin-top: -10px;
 }
@@ -25,7 +28,7 @@ ul {
   list-style-type: none;
 }
 #order-list-price{
-  padding-right: 20px;
+  margin-right: 20px;
   text-align: right;
 }
 #small-note{
