--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,25 @@
+body {
+  background-image: url("../img/background.jpg");
+  background-repeat: repeat;
+}
+ul {
+  list-style-type: none;
+}
+.btn {
+  margin-top: 10px;
+}
+.container {
+  margin-top: 50px;
+  margin-bottom: 2px;
+  background-color: white;
+}
+.totals {
+  text-align: right;
+  padding-right: 20px;
+}
+.totals p {
+  margin-top: -10px;
+}
 #main {
   border: solid black;
   min-height: 500px;
@@ -5,38 +27,16 @@
   padding-top: 10px;
   margin-right: 2px;
 }
-.container {
-  margin-top: 50px;
-  margin-bottom: 2;
-  background-color: white;
-}
-body {
-  background-image: url("../img/background.jpg");
-  background-repeat: repeat;
-}
-.totals {
-  text-align: right;
-  padding-right: 20px;
-}
-#pizza-icon{
-  width: 20px;
-}
-.totals p{
-  margin-top: -10px;
-}
-ul {
-  list-style-type: none;
-}
 #order-list-price{
   margin-right: 20px;
   text-align: right;
+}
+#pizza-icon{
+  width: 20px;
 }
 #small-note{
   font-family: Dongle;
   margin-top: 10px;
   font-size: 13px;
   margin-bottom: -10px;
-}
-.btn {
-  margin-top: 10px;
 }
